[gd_scene load_steps=12 format=3 uid="uid://d3hrqqxu0w27i"]

[ext_resource type="Script" path="res://scripts/skills/dashAttack.gd" id="1_7kopd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ljhpx"]
size = Vector2(50, 50)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xytrt"]
size = Vector2(250, 250)

[sub_resource type="Animation" id="Animation_f2hid"]
resource_name = "attack"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Laser:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Explosion:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0mytw"]
_data = {
"attack": SubResource("Animation_f2hid")
}

[sub_resource type="Curve" id="Curve_136cc"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_tp1sj"]
curve = SubResource("Curve_136cc")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_mjbah"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(100, 1, 1)
angle_min = -720.0
angle_max = 720.0
spread = 180.0
initial_velocity_min = 67.6
initial_velocity_max = 203.86
gravity = Vector3(0, 0, 0)
damping_min = 300.0
damping_max = 400.0
scale_min = 10.0
scale_max = 10.0
alpha_curve = SubResource("CurveTexture_tp1sj")

[sub_resource type="Curve" id="Curve_jq68x"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.243094, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_xyn74"]
curve = SubResource("Curve_jq68x")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_4wsh2"]
particle_flag_disable_z = true
angle_min = -720.0
angle_max = 720.0
spread = 180.0
initial_velocity_max = 534.49
gravity = Vector3(0, 0, 0)
damping_min = 800.0
damping_max = 800.0
scale_min = 10.0
scale_max = 10.0
alpha_curve = SubResource("CurveTexture_xyn74")

[node name="DashAttack" type="Area2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_7kopd")

[node name="LaserCollider" type="CollisionShape2D" parent="."]
position = Vector2(50, 0)
shape = SubResource("RectangleShape2D_ljhpx")
disabled = true

[node name="ExplosionCollider" type="CollisionShape2D" parent="."]
position = Vector2(200, 0)
shape = SubResource("RectangleShape2D_xytrt")
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0mytw")
}

[node name="Laser" type="GPUParticles2D" parent="."]
position = Vector2(100, 0)
amount = 300
process_material = SubResource("ParticleProcessMaterial_mjbah")
lifetime = 0.7
explosiveness = 0.5

[node name="Explosion" type="GPUParticles2D" parent="."]
position = Vector2(200, 0)
amount = 300
process_material = SubResource("ParticleProcessMaterial_4wsh2")
explosiveness = 1.0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
